force-app/main/default/objects/Event_Badge__c/Event_Badge__c.object-meta.xml
<CustomObject>
    <label>Event Badge</label>
    <nameField>
        <displayFormat>EB-{000000}</displayFormat>
        <label>Event Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>