force-app/main/default/objects/Event_Badge__c/fields/Badge_Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Badge_Retrieval__c</fullName>
    <formula>TEXT(Event_Participation__r.Badge_Retrieval__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Retrieval</label>
    <type>Text</type>
</CustomField>