force-app/main/default/objects/Event_Badge__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <type>Url</type>
</CustomField>