force-app/main/default/objects/Event_Badge__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Badges</relationshipLabel>
    <relationshipName>Event_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>