force-app/main/default/objects/Event_Badge__c/fields/Event_Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Exhibitor</label>
    <referenceTo>Event_Exhibitor__c</referenceTo>
    <relationshipLabel>Event Badges</relationshipLabel>
    <relationshipName>Event_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>