force-app/main/default/objects/Event_Badge__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Participation</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Event Badges</relationshipLabel>
    <relationshipName>Event_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>