force-app/main/default/objects/Event_Badge__c/fields/Event_Participation_Role__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation_Role__c</fullName>
    <description>ePoster presenter, ePresentation presenter, Tournament candidate</description>
    <label>Event Participation Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>