force-app/main/default/objects/Event_Badge__c/fields/Event_Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Registration Group</label>
    <referenceTo>Event_Registration_Group__c</referenceTo>
    <relationshipLabel>Event Badges</relationshipLabel>
    <relationshipName>Event_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>