force-app/main/default/objects/Event_Badge__c/fields/Footer_Color__c.field-meta.xml
<CustomField>
    <fullName>Footer_Color__c</fullName>
    <label>Footer Color</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>