force-app/main/default/objects/Event_Badge__c/fields/Footer_Definitions__c.field-meta.xml
<CustomField>
    <fullName>Footer_Definitions__c</fullName>
    <label>Footer Definitions</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate Member</fullName>
            </value>
            <value>
                <fullName>Corresponding</fullName>
            </value>
            <value>
                <fullName>Day of the week</fullName>
            </value>
            <value>
                <fullName>EAN Head Office</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Fellow of the EAN</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Hostess</fullName>
            </value>
            <value>
                <fullName>Meeting only</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
            <value>
                <fullName>Panel Management Group Member</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Resident &amp; Research Member</fullName>
            </value>
            <value>
                <fullName>Student Member</fullName>
            </value>
            <value>
                <fullName>Technical Staff</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>ePoster presenter</fullName>
            </value>
            <value>
                <fullName>ePresentation presenter</fullName>
            </value>
            <value>
                <fullName>Tournament candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>