force-app/main/default/objects/Event_Badge__c/fields/Footer_Size__c.field-meta.xml
<CustomField>
    <fullName>Footer_Size__c</fullName>
    <label>Footer Size</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>