force-app/main/default/objects/Event_Badge__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Group Name</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>