force-app/main/default/objects/Event_Badge__c/fields/Label_type__c.field-meta.xml
<CustomField>
    <fullName>Label_type__c</fullName>
    <label>Label type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Danger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>