force-app/main/default/objects/Event_Badge__c/fields/Non_Prescriber_Info__c.field-meta.xml
<CustomField>
    <fullName>Non_Prescriber_Info__c</fullName>
    <label>Non Prescriber Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>