force-app/main/default/objects/Event_Badge__c/fields/QR_code__c.field-meta.xml
<CustomField>
    <fullName>QR_code__c</fullName>
    <label>QR-code</label>
    <type>Url</type>
</CustomField>