force-app/main/default/objects/Event_Badge__c/fields/QR_code_link__c.field-meta.xml
<CustomField>
    <fullName>QR_code_link__c</fullName>
    <description>Link to qr code wich will be displayed on badge. If QR_code__c is not blank the filed will contans it value.</description>
    <formula>IF( ISBLANK(QR_code__c) ,

 &quot;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=&quot;
+LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
+ Id, 

 QR_code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR-code link</label>
    <type>Text</type>
</CustomField>