force-app/main/default/objects/Event_Badge__c/fields/Requested_For_Print_Or_Preview__c.field-meta.xml
<CustomField>
    <fullName>Requested_For_Print_Or_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested For Print Or Preview</label>
    <type>Checkbox</type>
</CustomField>