force-app/main/default/objects/Event_Badge__c/recordTypes/Day_of_the_week.recordType-meta.xml
<RecordType>
    <fullName>Day_of_the_week</fullName>
    <active>true</active>
    <description>DD Month YYYY (for one day tickets) Firstname Lastname City, Country (Official Address) Non-/Prescriber info</description>
    <label>Day of the week</label>
</RecordType>