force-app/main/default/objects/Event_Badge__c/recordTypes/EAN_Head_Office_Badge.recordType-meta.xml
<RecordType>
    <fullName>EAN_Head_Office_Badge</fullName>
    <active>true</active>
    <description>Firstname Lastname City, Country</description>
    <label>EAN Head Office Badge</label>
</RecordType>