force-app/main/default/objects/Event_Badge__c/recordTypes/Exhibitor_Badge.recordType-meta.xml
<RecordType>
    <fullName>Exhibitor_Badge</fullName>
    <active>true</active>
    <description>(for known Participants of Industry Partners) Firstname Lastname City, Country (Official Address) (one additional badge)  -&gt; requirements are explained in: https://jira.towa-digital.com/browse/EANER-61</description>
    <label>Exhibitor Badge</label>
</RecordType>