force-app/main/default/objects/Event_Badge__c/recordTypes/Free_Badge.recordType-meta.xml
<RecordType>
    <fullName>Free_Badge</fullName>
    <active>true</active>
    <label>Free Badge</label>
</RecordType>