force-app/main/default/objects/Event_Badge__c/recordTypes/Hostess_Badge.recordType-meta.xml
<RecordType>
    <fullName>Hostess_Badge</fullName>
    <active>true</active>
    <description>Firstname Lastname City, Country</description>
    <label>Hostess Badge</label>
</RecordType>