force-app/main/default/objects/Event_Badge__c/recordTypes/Meeting_Only.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Only</fullName>
    <active>true</active>
    <description>Meeting Only: Firstname Lastname City, Country (of Residence)</description>
    <label>Meeting Only</label>
</RecordType>