force-app/main/default/objects/Event_Badge__c/recordTypes/Member_Badge.recordType-meta.xml
<RecordType>
    <fullName>Member_Badge</fullName>
    <active>true</active>
    <description>Firstname Lastname City, Country (Official Address) Non-/Prescriber info Membership Status Event Participation Role (ePoster presenter, ePresentation presenter, Tournament candidate) Working Group Member (Panel Management Group) Event Persona (Press) Facu</description>
    <label>Member Badge</label>
</RecordType>