force-app/main/default/objects/Event_Badge__c/recordTypes/Non_Member_Badge.recordType-meta.xml
<RecordType>
    <fullName>Non_Member_Badge</fullName>
    <active>true</active>
    <description>Company?</description>
    <label>Non-Member Badge</label>
</RecordType>