force-app/main/default/objects/Event_Badge__c/recordTypes/Technical_Staff_Badge.recordType-meta.xml
<RecordType>
    <fullName>Technical_Staff_Badge</fullName>
    <active>true</active>
    <description>Firstname Lastname City, Country</description>
    <label>Technical Staff Badge</label>
</RecordType>