force-app/main/default/objects/Event_Badge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QR_code__c</columns>
    <columns>Event_custom__c</columns>
    <columns>Footer_Definitions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>